# delphis_nap

./: .gitignore  Cargo.toml  README.md
sql/: .env  Cargo.toml  reset_database.txt
sql/.sqlx/: query-07783f3367cc23bf8216185a1041dcce225cce8e5e058a267d8fe18536a987e8.json  query-10e455059ce8f17dcb9fde798f75b23e770a31df08773aa2a11b4ce0f97eaccc.json  query-160a0c33d44aacba7b23fb5a8d394d7b72b04c805cc91defa0376a5d41c83074.json  query-1d7cd73d0c627ed2b8c94d3a9b8a666183b5a3abe658d2d43fe5163ac9f1664b.json  query-29aabd37707525cf2dcb5a3b7a85e77bea1b2eb582f018495f87223354dc8983.json  query-3147872644bbca1c292a5f754b3dd0a8126e75f29032b19369b8e6d3d9817b99.json  query-353115ad3053df49f765e35b6c1699c9111791cda1809385e3debccca7f2429c.json  query-3804034ffdbd481f6fa8b345d7d7295967098c381afc6d5fb947a6fb2f203858.json  query-3c5781e242865173e70207c319c3b5e8d5c3bb4904b0fd8fd0cb323ffe251b81.json  query-3dc022f5b5a8380ceeedec3d25d76992400e9f279829d36bc874c4a8059038bb.json  query-3ec3b91f8e46b76871b4c6af6fdc3dc176f6c68d0d1d99a9810cc24425ee7876.json  query-428b88fba2d06068770eefbcf19bd2d7538e5020327a314000e525479c19920d.json  query-45f8b1bb5abb3db7898d5c1aed73a49e14caa5025444bad1f478865912695185.json  query-498d9465440daa626cc207e10e532f6378e9307ae2e1ee6cbf690b50a6de7a70.json  query-4e899e09afd62a00ededdde81402f2c4bec9df7de9464db13206d8af5d925ea9.json  query-58aa4ebae1f3c78251a131fbb340c0f37b7fe798ff530d71ff865a5202fb4c28.json  query-5b2e2aeacf34173b00aa2090f9ce712d2de0388af26a553cf818c112556ddfe6.json  query-71ea6f015aecdd80f742fcf43b4de7952adffc001ad94a27cc114665b4c55034.json  query-791b2ef42292bd20e0b8d654d23ba58c27835200bf7d476736bd01612b721796.json  query-83f06ba48e5f539bfdb50f4a5de31bc4063bd469dcaaaf6f1bfe16f4f16e9977.json  query-9248713ef4651993bc4ad6b8d32ce9ae6ffadd5c5f6f43b977d1c84e402c9605.json  query-9339f9f34c5b858ceb387eb78670082c105198a47d2d2c1e60cbf1b29ffb49a5.json  query-945a9b8b0bfb361f847182709841d89c64437211ddf2b37f771161ccd8294d39.json  query-9d8faf80049ed57fdf5517429ea8697b911a29918c4ee680129b49cea7f99dcd.json  query-ab12a50febedf3953dcdda2358f5a85dbfefea5d8097834ed730acc3f2f1467b.json  query-ab756764cd97cc5367d3489b223afcad658fce9dc3ac5424422c198999af9bc0.json  query-b1c34f1bafe3b52f35579400f859dcdb1a4ce860df0a886c6b6ddcb6073e11eb.json  query-c8cf5f87eec485340b449c7e0096c0d2b489b119149337ff9285bb0daa220a16.json  query-ce27901d37570255134f8b0502d12f29f9d81c8741b15e637b2645a08fd9c326.json  query-d1dcd88fb25de2150dc74c63517b8e39b709aaef1a19c390f31e29463a66c51d.json  query-db4e7e6a84fb7acaec1fbefb7e3b5dbead6562355b0d0a1b5609bb52d059be10.json  query-dc7a31ce0438256da9ff201b92cd1a09b5556ad0cffb9e8eec5270f3440397f6.json  (+7 more)
(+69 files in other folders)
