[package]
name = "sql"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
csv = "1.4.0"
strum_macros = "0.28.0"
strum = "0.28.0"
reqwest = "0.13.2"
plotters = "0.3.7"
eframe = { version = "0.34", features = ["default",
    "default_fonts",
    "glow",
] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["datepicker", "svg", "all_loaders", "svg_text"] }
egui_autocomplete = {git = "https://github.com/yvind/egui_autocomplete"}
derivative = "2.2.0"
egui-async = "0.4.1"
jiff = {version = "0.2.23", features = ["std"]}
